--- a/server/src/back-office/components/prenotation-list.html
+++ b/server/src/back-office/components/prenotation-list.html
@@ -48,30 +48,70 @@
       duration: 1,
       user: "635d00fdc77f11a1f22d313d",
     },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
   ];
   let tmp = "";
   $(document).ready(function () {
     pts.map((item, index) => {
-      tmp +=
-        `
-          <div class="flex flex-row my-3 flex-1">` +
-        (index + 1) +
-        `.
-              <div class="flex flex-col flex-1 bg-white p-2">
-                  <div><span class="font-semibold">City:</span> ` +
-        item.place +
-        `
-                  </div>
-                  <div><span class="font-semibold">Schedule:</span> ` +
-        item.start +
-        `
-                  </div>
-                  <div><span class="font-semibold">Customer id:</span> ` +
-        item.user +
-        `
-                  </div>
+      tmp +=`
+        <div class="flex flex-row my-3 flex-1">` +
+          (index + 1) +`.
+          <div class="flex flex-row flex-1 bg-white p-2">
+            <div class="flex flex-col">
+              <div><span class="font-semibold">City:</span> ` +
+                item.place +`
               </div>
-          </div>`;
+              <div><span class="font-semibold">Schedule:</span> ` +
+                item.start +`
+              </div>
+              <div><span class="font-semibold">Customer id:</span> ` +
+                item.user +`
+              </div>
+            </div>
+            <button class="btn bg-[#952a83] p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center">Delete</button>
+          </div>
+        </div>`;
     });
     $("#ptsList").html(tmp);
   });
