--- a/server/src/back-office/components/prenotation-list.html
+++ b/server/src/back-office/components/prenotation-list.html
@@ -1,5 +1,5 @@
 <script>
-  const pts = [
+  const ptss = [
     {
       place: "Bubano",
       start: "2023-01-23T11:00:00.000Z",
@@ -91,30 +91,68 @@
       user: "635d00fdc77f11a1f22d313d",
     },
   ];
-  let tmp = "";
-  $(document).ready(function () {
-    pts.map((item, index) => {
-      tmp +=`
-        <div class="flex flex-row my-3 flex-1">` +
-          (index + 1) +`.
+
+  let pts = [];
+  const getPts = async () => {
+    var ret = await fetch("http://localhost:5000/api/prenotation", {
+      method: "GET",
+      //body: {},
+      credentials: "include",
+    });
+    pts = await ret.json();
+    await loadList();
+    //console.log(pts);
+  };
+  
+  const loadList = () => {
+    let tmp = "";
+    $(document).ready(function () {
+      pts.map((item, index) => {
+        tmp +=
+          `
+        <div class="flex flex-row my-3">` +
+          (index + 1) +
+          `.
           <div class="flex flex-row flex-1 bg-white p-2">
             <div class="flex flex-col">
               <div><span class="font-semibold">City:</span> ` +
-                item.place +`
+          item.place +
+          `
               </div>
               <div><span class="font-semibold">Schedule:</span> ` +
-                item.start +`
+          item.start +
+          `
               </div>
               <div><span class="font-semibold">Customer id:</span> ` +
-                item.user +`
+          item.user +
+          `
               </div>
             </div>
-            <button class="btn bg-[#952a83] p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center">Delete</button>
+            <button class="btn bg-[#952a83] p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt(`+
+          item.company +
+          `
+            )">
+              Delete
+            </button>
           </div>
         </div>`;
+      });
+      $("#ptsList").html(tmp);
     });
-    $("#ptsList").html(tmp);
-  });
+  };
+
+  const deletePt = async (id) => {
+    var ret = await fetch("http://localhost:5000/api/prenotation/"+id, {
+      method: "POST",
+      body: {},
+      credentials: "include",
+    });
+    pts = await ret.json();
+    await loadList();
+    //console.log(pts);
+  }
+
+  getPts();
 </script>
 
 <body>
