--- a/server/src/back-office/components/sidebar.html
+++ b/server/src/back-office/components/sidebar.html
@@ -6,6 +6,9 @@
     const home = () => {
       window.location.href = "home.html";
     };
+    const profile = () => {
+      window.location.href = "profile.html"
+    }
   </script>
 </head>
 <div class="bg-transparent dark:bg-slate-900 relative rounded-lg">
@@ -14,6 +17,7 @@
   >
     <button
       class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] dark:text-gray-400 dark:hover:bg-slate-800"
+      onclick="profile()"
     >
       <!-- HeroIcon - User -->
       <svg
