--- a/server/src/back-office/components/timetable.html
+++ b/server/src/back-office/components/timetable.html
@@ -2,7 +2,7 @@
   <style>
     td,
     th {
-      border: 1px solid #000000;
+      border: 1px solid black;
       text-align: left;
       padding: 8px;
     }
@@ -119,14 +119,14 @@
         </div>
         <button
           id="changeBtn"
-          class="bg-[#114D59] hover:opacity-80 text-white font-bold py-2 px-4 my-2 rounded"
+          class="bg-secondary hover:opacity-80 text-white font-bold py-2 px-4 my-2 rounded"
           onclick="goChange()"
         >
           Change Data
         </button>
         <button
           id="saveBtn"
-          class="hidden bg-[#11591D] hover:opacity-80 text-white font-bold py-2 px-4 my-2 rounded"
+          class="hidden bg-save hover:opacity-80 text-white font-bold py-2 px-4 my-2 rounded"
           onclick="saveChange()"
         >
           Save
