--- a/server/src/back-office/views/home.html
+++ b/server/src/back-office/views/home.html
@@ -43,7 +43,7 @@
           text: "prenotations",
           img: "../public/schedule.png",
           alt: "prenotation icon",
-          href: "schedules.html",
+          href: "prenotations.html",
         },
         {
           text: "Billing",
@@ -54,7 +54,7 @@
         {
           text: "companies",
           img: "../public/companies.png",
-          alt: "online services icon",
+          alt: "companies icon",
           href: "companies.html",
         },
       ];
@@ -94,11 +94,11 @@
         class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
       ></div>
-      <div class="flex w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]" id="presentation">
-        <div class="flex self-center flex-col w-full">
+      <div class="flex w-full md:h-screen p-5 pt-0 ml-0 md:p-5 md:ml-[106px]" id="presentation">
+        <div class="flex self-center flex-col w-full h-auto">
           <div class="flex flex-col text-center p-3 md:pb-6">
             <!-- TODO mettere if -> se admin Manage all your companies, se no va bene cosi-->
-            <div class="primary mb-3 font-bold text-4xl md:text-6xl">
+            <div class="primary font-bold text-4xl mb-5 md:mb-0 md:text-6xl">
               Manage your own company
             </div>
           </div>
