--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -50,20 +50,20 @@
         </div>
         <div class="flex flex-row">
           <button
-            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded mx-4"
             onclick="showPtsList()"
           >
-            PRENOTATIONS LIST
+            LIST
           </button>
           <button
-            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded mx-4"
             onclick="showSchedules()"
           >
             SCHEDULES
           </button>
         </div>
-        <div id="list" class="hidden flex flex-1 m-4"></div>
-        <div id="schedules" class="flex m-4"></div>
+        <div id="list" class="flex flex-1 m-4"></div>
+        <div id="schedules" class="hidden flex m-4"></div>
       </div>
     </div>
   </body>
