--- a/server/src/back-office/components/prenotation-list.html
+++ b/server/src/back-office/components/prenotation-list.html
@@ -120,9 +120,11 @@
         pts.map((item, index) => {
           tmp +=
             `
-        <div class="flex flex-row my-3">` +
+        <div class="flex flex-row my-3">
+          <span class="mr-1">` +
             (index + 1) +
             `.
+            </span>
           <div class="flex flex-row flex-1 bg-white/50 p-2 rounded">
             <div class="flex flex-col">
               <div><span class="font-semibold">City:</span> ` +
