--- a/server/src/back-office/components/prenotation-list.html
+++ b/server/src/back-office/components/prenotation-list.html
@@ -1,98 +1,8 @@
 <script>
-  const ptss = [
-    {
-      place: "Bubano",
-      start: "2023-01-23T11:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Bubano",
-      start: "2023-01-23T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Mordano",
-      start: "2023-02-23T14:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Trieste",
-      start: "2023-02-01T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-    {
-      place: "Lugo",
-      start: "2023-02-06T09:00:00.000Z",
-      duration: 1,
-      user: "635d00fdc77f11a1f22d313d",
-    },
-  ];
-
   let pts = [];
+  let newPts = [];
+  let searchCompany = "";
+  let searchCostumer = "";
   const getPts = async () => {
     var ret = await fetch("http://localhost:5000/api/prenotation", {
       method: "GET",
@@ -113,44 +23,89 @@
     window.location.reload();
   };
 
+  const filterList = () => {
+    let reqC = $("#filterCompanyId").val();
+    let reqU = $("#filterUserId").val();
+    console.log("reqC: " + reqC);
+    console.log("reqU: " + reqU);
+    let compareC;
+    let compareU;
+    let tmp = "";
+    $(document).ready(function () {
+      let flag = 0;
+      if (pts !== undefined) {
+        let index = 0;
+        pts.map((item) => {
+          compareC = reqC === "" ? 0 : reqC === item.company ? 0 : 1;
+          compareU = reqU === "" ? 0 : reqU === item.user ? 0 : 1;
+          console.log("guard: " + (compareC + compareU));
+          if (compareC + compareU === 0) {
+            flag = 1;
+            tmp += makeItem(
+              index,
+              item.place,
+              item.start,
+              item.user,
+              item.company
+            );
+            index++;
+          }
+        });
+      }
+      flag == 1
+        ? $("#ptsList").html(tmp)
+        : $("#ptsList").html("No prenotations founded with these filters");
+    });
+  };
+
+  const makeItem = (index, place, start, user, company) => {
+    return (
+      `
+        <div class="flex flex-row my-3">
+          <span class="mr-1">` +
+      (index + 1) +
+      `.
+            </span>
+          <div class="flex flex-row flex-1 bg-white/50 p-2 rounded">
+            <div class="flex flex-col">
+              <div><span class="font-semibold">City:</span> ` +
+      place +
+      `
+              </div>
+              <div><span class="font-semibold">Schedule:</span> ` +
+      start +
+      `
+              </div>
+              <div><span class="font-semibold">Company id:</span> ` +
+      company +
+      `
+                </div>
+                <div><span class="font-semibold">Customer id:</span> ` +
+      user +
+      `
+              </div>
+            </div>
+            <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
+      company +
+      `')">
+              Delete
+            </button>
+          </div>
+        </div>`
+    );
+  };
   const loadList = () => {
     let tmp = "";
     $(document).ready(function () {
       if (pts !== undefined) {
         pts.map((item, index) => {
-          tmp +=
-            `
-        <div class="flex flex-row my-3">
-          <span class="mr-1">` +
-            (index + 1) +
-            `.
-            </span>
-          <div class="flex flex-row flex-1 bg-white/50 p-2 rounded">
-            <div class="flex flex-col">
-              <div><span class="font-semibold">City:</span> ` +
-            item.place +
-            `
-              </div>
-              <div><span class="font-semibold">Schedule:</span> ` +
-            item.start +
-            `
-              </div>
-              <div><span class="font-semibold">Customer id:</span> ` +
-            item.user +
-            `
-              </div>
-              <div><span class="font-semibold">Company id:</span> ` +
-            item.company +
-            `
-              </div>
-            </div>
-            <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
-            item.company +
-            `')">
-              Delete
-            </button>
-          </div>
-        </div>`;
+          tmp += makeItem(
+            index,
+            item.place,
+            item.start,
+            item.user,
+            item.company
+          );
         });
       }
       $("#ptsList").html(tmp);
@@ -165,7 +120,9 @@
     <div class="flex flex-col lg:flex-row">
       <div class="flex flex-col sm:flex-row lg:mr-4">
         <span class="flex">
-          <label for="filterCompanyId" class="flex self-center primary">Filter by company id: </label>
+          <label for="filterCompanyId" class="flex self-center primary"
+            >Filter by company id:</label
+          >
         </span>
         <span>
           <input
@@ -173,13 +130,16 @@
             name="filterCompanyId"
             type="text"
             placeholder="es. 63c810b7a6a58c3116769cf9"
-            class="px-1 m-1 rounded"
+            class="px-1 m-1 rounded w-[15rem]"
+            oninput="filterList()"
           />
         </span>
       </div>
       <div class="flex flex-col sm:flex-row">
         <span class="flex">
-          <label for="filterUserId" class="flex self-center primary">Filter by user id: </label>
+          <label for="filterUserId" class="flex self-center primary"
+            >Filter by customer id:
+          </label>
         </span>
         <span>
           <input
@@ -187,7 +147,8 @@
             name="filterUserId"
             type="text"
             placeholder="es. 63c810b7a6a58c3116769cf9"
-            class="px-1 m-1 rounded"
+            class="px-1 m-1 rounded w-[15rem]"
+            oninput="filterList()"
           />
         </span>
       </div>
