--- a/server/src/back-office/views/home.html
+++ b/server/src/back-office/views/home.html
@@ -10,12 +10,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="../components/sidebar.html" rel="import" />
+    <link href="../tabs/sidebar.html" rel="import" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script>
       $(document).ready(function () {
-        $("#sidebar").load("../components/sidebar.html");
+        $("#sidebar").load("../tabs/sidebar.html");
       });
       const gotologin = (href) => {
         window.location.href = href;
