--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link href="../components/prenotation-list.html" rel="import" />
-    <link href="../components/sidebar.html" rel="import" />
-    <link href="../components/schedules.html" rel="import" />
+    <link href="../tabs/prenotation-list.html" rel="import" />
+    <link href="../tabs/sidebar.html" rel="import" />
+    <link href="../tabs/schedules.html" rel="import" />
     <script type="text/javascript" src="../script/index.js"></script>
     <title>CasAnimale - Back Office</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -15,9 +15,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       $(document).ready(function () {
-        $("#sidebar").load("../components/sidebar.html");
-        $("#list").load("../components/prenotation-list.html");
-        $("#schedules").load("../components/schedules.html");
+        $("#sidebar").load("../tabs/sidebar.html");
+        $("#list").load("../tabs/prenotation-list.html");
+        $("#schedules").load("../tabs/schedules.html");
       });
       const showList = () => {
         $(document).ready(function () {
@@ -44,7 +44,7 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-2xl sm:text-6xl m-4">
+        <div id="title" class="font-bold text-4xl sm:text-6xl m-4">
           PRENOTATIONS
         </div>
         <div class="flex flex-row">
