--- a/server/src/back-office/views/companies.html
+++ b/server/src/back-office/views/companies.html
@@ -1,9 +1,42 @@
-manage companies
-
-
-<!--
-    
-    vedo lista companies
-    posso modificare tutti i dati delle companies
-
--->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!--link href="../tabs/company-info.html" rel="import" /-->
+    <script type="text/javascript" src="../script/index.js"></script>
+    <title>CasAnimale - Back Office</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      $(document).ready(function () {
+        $("#sidebar").load("../tabs/sidebar.html");
+        $("#companyInfo").load("../tabs/company-info.html");
+      });
+    </script>
+  </head>
+  <body>
+    <div class="flex flex-col md:flex-row flex-1 h-full">
+      <div
+        class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
+        id="sidebar"
+      ></div>
+      <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
+        <div id="title" class="font-bold text-4xl sm:text-6xl m-4">
+          COMPANIES
+        </div>
+        <div class="gray m-4 mb-1">
+          Click on a company id to copy it! <i class="fa fa-copy"></i>
+        </div>
+        <div id="companyInfo" class="flex m-4 mt-2"></div>
+      </div>
+    </div>
+  </body>
+</html>
