changed bo title

--- a/server/src/back-office/views/home.html
+++ b/server/src/back-office/views/home.html
@@ -98,7 +98,7 @@
           <div class="flex flex-col text-center p-3 md:pb-6">
             <!-- TODO mettere if -> se admin Manage all your companies, se no va bene cosi-->
             <div class="primary font-bold text-4xl mb-5 md:mb-0 md:text-6xl">
-              Manage your own company
+              Administration
             </div>
           </div>
           <div
